5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1815_2566.log
== TEST (2019-06-08 14:31:55) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
print(v_size)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:41:25) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(v_size)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:41:58) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(v_aux)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:42:31) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(round(v_aux, 1)

	
-- EXECUTION TIME:
0.794988
-- ERROR:
  File "/home/codebench/codes/1815/2566/main.py", line 23
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:42:51) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(round(v_aux, 1)

	
-- ERROR:
File "XXXX", line 23
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:43:12) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(round(v_aux(), 1)
	
-- ERROR:
File "XXXX", line 22
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:43:32) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(round(v_aux(), 1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:43:43) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(round(v_aux(), 1))
	
-- EXECUTION TIME:
1.18664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 20, in <module>
    print(round(v_aux(), 1))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:44:02) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(round(v_aux, 1))
	
-- EXECUTION TIME:
1.08845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 20, in <module>
    print(round(v_aux, 1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:44:02) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(round(v_aux, 1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:44:25) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(i*100)/v_size
print(round(v_aux(), 1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:45:59) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=round((i*100)/v_size,1)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:46:36) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=round((i*100)/v_size,2)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:47:34) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=round((i*100)/v_size,-1)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:48:53) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=(((i*100)/v_size)*10)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:49:41) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((i*100)/v_size)*10
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:51:43) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((i*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:53:54) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((i*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:55:24) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux[i]=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:55:25) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux[i]=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- EXECUTION TIME:
0.920695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 19, in <module>
    v_aux[i]=((v_aux[i]*100)/v_size)
IndexError: index 18 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:55:42) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:56:18) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:56:30) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:56:54) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:57:23) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:58:25) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- EXECUTION TIME:
1.21243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 19, in <module>
    i=((v_aux[i]*100)/v_size)
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:00:16) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[cont]*100)/v_size)
	 cont=cont+1
print(v_aux)
	
-- EXECUTION TIME:
0.666788
-- ERROR:
  File "/home/codebench/codes/1815/2566/main.py", line 21
    cont=cont+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:00:26) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[cont]*100)/v_size)
	 cont=cont+1
print(v_aux)
	
-- ERROR:
File "XXXX", line 21
    cont=cont+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:00:40) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[cont]*100)/v_size)
	cont=cont+1
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:00:42) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[cont]*100)/v_size)
	cont=cont+1
print(v_aux)
	
-- EXECUTION TIME:
1.05431
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[3 0 0 3 4 6]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
informe as faltas: [1 2 4 5 5 8]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
informe as faltas: [2 1 3 1 2 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:02:02) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux[cont]=((v_aux[cont]*100)/v_size)
	cont=cont+1
print(v_aux)
	
-- EXECUTION TIME:
1.30603
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:02:54) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux[cont]=((v_aux[i]*100)/v_size)
	cont=cont+1
print(v_aux)
	
-- EXECUTION TIME:
1.09655
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 20, in <module>
    v_aux[cont]=((v_aux[i]*100)/v_size)
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:03:25) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux[i]=((v_aux[cont]*100)/v_size)
	cont=cont+1
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:03:25) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux[i]=((v_aux[cont]*100)/v_size)
	cont=cont+1
print(v_aux)
	
-- EXECUTION TIME:
1.18832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 20, in <module>
    v_aux[i]=((v_aux[cont]*100)/v_size)
IndexError: index 18 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:11:29) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((i*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:13:31) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	i=((v_aux[i]*100)/v_size)
print(v_aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:16:11) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2(cont)=(i*100)/v_size
	cont=cont+1
print(v_aux2)
	
-- ERROR:
File "XXXX", line 21
    v_aux2(cont)=(i*100)/v_size
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:16:27) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=(i*100)/v_size
	cont=cont+1
print(v_aux2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:17:24) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size,1)
	cont=cont+1
print(v_aux2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:17:26) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size,1)
	cont=cont+1
print(v_aux2)
	
-- EXECUTION TIME:
1.14242
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
informe as faltas: [ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
informe as faltas: [15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:17:44) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size,1)
	cont=cont+1
print(v_aux2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:18:35) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size,1)
	cont=cont+1
print(v_aux2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:18:46) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size,1)
	cont=cont+1
print(v_aux2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:18:52) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size,1)
	cont=cont+1
print(v_aux2)
	
-- EXECUTION TIME:
1.12379
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:18:59) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size, 1)
	cont=cont+1
print(v_aux2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:19:01) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=int)
v_aux2=zeros(6, dtype=int)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size, 1)
	cont=cont+1
print(v_aux2)
	
-- EXECUTION TIME:
1.16541
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
informe as faltas: [15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:19:45) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=float)
v_aux2=zeros(6, dtype=float)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size, 1)
	cont=cont+1
print(v_aux2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:19:47) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=float)
v_aux2=zeros(6, dtype=float)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size, 1)
	cont=cont+1
print(v_aux2)
	
-- EXECUTION TIME:
1.10978
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
informe as faltas: [15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:20:03) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=float)
v_aux2=zeros(6, dtype=float)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size, 1)
	cont=cont+1
print(v_aux2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:20:15) 
-- CODE:
from numpy import*
faltas=array(eval(input("informe as faltas: ")))
v_aux=zeros(6, dtype=float)
v_aux2=zeros(6, dtype=float)
v_size=size(faltas)
cont=0
for i in faltas:
	if(i==2):
		v_aux[0]=v_aux[0]+1
	elif(i==3):
		v_aux[1]=v_aux[1]+1
	elif(i==4):
		v_aux[2]=v_aux[2]+1
	elif(i==5):
		v_aux[3]=v_aux[3]+1
	elif(i==6):
		v_aux[4]=v_aux[4]+1
	elif(i==7):
		v_aux[5]=v_aux[5]+1
for i in v_aux:
	v_aux2[cont]=round((i*100)/v_size, 1)
	cont=cont+1
print(v_aux2)
	
-- EXECUTION TIME:
1.12336
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
